# redeploy

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  app.doql.less  goal.yaml  local.dev.txt  pyproject.toml
.github/workflows/: trigger-org-sync.yml
.redeploy/: preflight-schema.yaml
docs/: README.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
redeploy/: __init__.py  deploy_watch.py  discovery.py  discovery_probe.py  discovery_registry.py  fleet_ops.py  gitsync.py  heal.py  pg_sync.py  source_hash.py
redeploy/analyze/: __init__.py  ignore.py  models.py  preflight_schema.py  spec_analyzer.py
redeploy/analyze/checkers/: __init__.py  base.py  binary.py  command_ref.py  compose.py  docker_build.py  env.py  path.py  reference.py
redeploy/apply/: executor.py  handlers.py  progress.py
redeploy/audit/: __init__.py  auditor.py  extractor.py  models.py  paths.py  patterns.py  probe.py
redeploy/cli/: __init__.py
redeploy/cli/commands/: apply_cmd.py  db_data.py  deploy_cmd.py  device_map.py  device_map_actions.py  devices.py  devices_display.py  fleet_cmd.py  hash_cmd.py  migrate_cmd.py  plan_apply.py  probe.py  (+7 more)
redeploy/discovery/: __init__.py  auto_probe.py  helpers.py  registry.py  scanners.py  ssh_credentials.py  types.py
redeploy/models/: enums.py  plan.py
redeploy/tests/: test_devices_display.py  test_discovery_probe.py  test_plan_apply_report.py  test_plan_apply_shared.py  test_query_handlers.py
tests/: test_gitsync_pg_hash.py  test_parallel_groups.py
